@@ -10,6 +10,7 @@ AC_DEFUN([SET_ARCH_DIRS],
       BUILD_ARCH_DIR=i586
       INSTALL_ARCH_DIR=i386
       JRE_ARCH_DIR=i386
+      ARCH_PREFIX=${LINUX32}
       ;;
     alpha*-*-*)
       BUILD_ARCH_DIR=alpha
@@ -35,6 +36,7 @@ AC_DEFUN([SET_ARCH_DIRS],
       BUILD_ARCH_DIR=ppc
       INSTALL_ARCH_DIR=ppc
       JRE_ARCH_DIR=ppc
+      ARCH_PREFIX=${LINUX32}
        ;;
     powerpc64-*-*)
       BUILD_ARCH_DIR=ppc64
@@ -60,6 +62,7 @@ AC_DEFUN([SET_ARCH_DIRS],
   AC_SUBST(BUILD_ARCH_DIR)
   AC_SUBST(INSTALL_ARCH_DIR)
   AC_SUBST(JRE_ARCH_DIR)
+  AC_SUBST(ARCH_PREFIX)
 ])
 
 AC_DEFUN([FIND_JAVAC],
