@@ -1,3 +1,15 @@
+2008-12-04  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* Makefile.am:
+	Prefix make invocations with
+	ARCH_PREFIX.  Pass the host, target and
+	build aliases through to the CACAO sub-configure.
+	* acinclude.m4:
+	Define ARCH_PREFIX to ${LINUX32} for
+	x86 and ppc architectures.
+	* configure.ac:
+	Check for linux32.
+
 2008-12-04  Gary Benson  <gbenson@redhat.com>
 
 	* .hgignore: Ignore rt/javax/script/*.
